--- a/src/index.html
+++ b/src/index.html
@@ -208,8 +208,8 @@
       <div
         class="max-w-screen-lg mx-auto mt-20 text-zinc-900 dark:text-zinc-200"
       >
-        <h2 class="text-5xl">Headliners</h2>
-        <p>Expirience the sonic delight from these made-up artists</p>
+        <h2 class="text-5xl"><span class="text-transparent bg-gradient-to-r from-cyan-500 via-green-500 to-pink-500 bg-clip-text">Headliners</span></h2>
+        <p>Expirience the sonic delight from these made-up artists across 7 days that music fans are calling 'one of the many gigs that will happen this year' </p>
         <div class="flex">
           <div
             id="previous"
@@ -228,7 +228,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -237,7 +237,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -246,7 +246,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -255,7 +255,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -264,7 +264,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -273,7 +273,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
 
               <div class="min-w-[80%] md:min-w-[40%]">
@@ -282,7 +282,7 @@
                   class="h-80 w-full snap-center rounded-xl bg-cover bg-center shadow-md shadow-black/20"
                 ></div>
                 <h5 class="mt-2">Cordoroy Gary</h5>
-                <h6>1st Julay 9pm - Main Stage</h6>
+                <h6>1st July 9pm - Main Stage</h6>
               </div>
             </div>
           </div>
@@ -373,5 +373,6 @@
         </table>
       </div>
     </main>
+    <div class="btn ">some button</div>
   </body>
 </html>
